# SPOT

./: .gitignore  CMakeLists.txt  README.md  netconfig.sh
src/: CMakeLists.txt  globals.h
src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  defines-HE.h  utils-HE.cpp  utils-HE.h
src/NonLinear/: drelu-field.h  relu-field.h
src/SPOT/: CMakeLists.txt  patching.cpp  patching.h
tests/: CMakeLists.txt  test_conv.cpp  test_oceanpub.cpp  test_relu.cpp  test_reluconv.cpp  test_spot.cpp  test_spot_minconvrelu.cpp  test_spot_plan.cpp
